<resources>
    <string name="app_name">Магазин телефонов</string>
    <string name="greetings">Добро пожаловать</string>
    <string name="add_new_record">Добавить новую запись</string>
    <string name="output_data">Вывести данные</string>
    <string name="exit_the_program">Выйти из программы</string>
    <string name="firm">Фирма</string>
    <string name="model">Модель</string>
    <string name="colour">Цвет</string>
    <string name="price">Цена</string>
    <string name="delete_picture">Удалить картинку</string>
    <string name="add">Добавить</string>
    <string name="back">◄ Назад</string>
    <string name="database">База данных телефонов</string>
    <string name="filter_closed">Фильтр ▼</string>
    <string name="filter_open">Фильтр ▲</string>
    <string name="enter_value">Введите значение</string>
    <string name="sort_by_columns">Сортировка по столбцам</string>
    <string name="delete_search">Удалить сортировку и поиск</string>
    <string name="hint">Для изменения или удаления записи кликните на неё</string>
    <string name="single_entry_change">Изменение одной записи</string>
    <string name="update">Измененить</string>
    <string name="delete">Удалить</string>
    <string-array name="fieldsNameSearch">
        <item>Фирма</item>
        <item>Модель</item>
        <item>Цвет</item>
    </string-array>
    <string-array name="fieldsName">
        <item></item>
        <item>Фирма</item>
        <item>Модель</item>
        <item>Цвет</item>
        <item>Цена</item>
    </string-array>
    <string-array name="fieldsNameManufacturer">
        <item></item>
        <item>Модель</item>
        <item>Цвет</item>
        <item>Цена</item>
    </string-array>
    <string-array name="fieldsNameModel">
        <item></item>
        <item>Фирма</item>
        <item>Цвет</item>
        <item>Цена</item>
    </string-array>
    <string-array name="fieldsNameColour">
        <item></item>
        <item>Фирма</item>
        <item>Модель</item>
        <item>Цена</item>
    </string-array>
    <string-array name="fieldsNamePrice">
        <item></item>
        <item>Фирма</item>
        <item>Модель</item>
        <item>Цвет</item>
    </string-array>
    <string-array name="order">
        <item>Возрастание</item>
        <item>Убывание</item>
    </string-array>
</resources>