<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SingleEntryChange">

    <TableRow
        android:id="@+id/trHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="10dp"
        android:layout_weight="1">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnBack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="2"
            android:background="@drawable/button_background"
            android:onClick="Back"
            android:text="@string/back"/>

        <TextView
            android:id="@+id/tvHeading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/single_entry_change"
            android:textSize="20dp"
            android:layout_weight="5"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </TableRow>

    <EditText
        android:id="@+id/etManufacturer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/firm"
        android:inputType="textCapWords"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf = "@+id/trHeading"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/etModel"
        />

    <EditText
        android:id="@+id/etModel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/model"
        android:inputType="textCapWords"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf = "@+id/trHeading"
        app:layout_constraintStart_toEndOf="@+id/etManufacturer"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/etColour"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/colour"
        android:inputType="textCapWords"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/etManufacturer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/etPrice"/>

    <EditText
        android:id="@+id/etPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/price"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/etColour"
        app:layout_constraintTop_toBottomOf="@+id/etModel"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/ivPicture"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:onClick="updatePicture"
        android:src="@drawable/absence"
        app:layout_constraintBottom_toTopOf="@+id/tvDeletePicture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPrice" />

    <TextView
        android:id="@+id/tvDeletePicture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:onClick="deletePicture"
        android:text="@string/delete_picture"
        android:textAlignment="center"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/pbLoading"
        app:layout_constraintTop_toBottomOf="@+id/ivPicture"/>

    <ProgressBar
        android:id="@+id/pbLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/tvDeletePicture"
        app:layout_constraintBottom_toTopOf="@+id/buttonChanging"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="invisible"
        />

    <TableRow
        android:id="@+id/buttonChanging"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="10dp"
        android:layout_weight="1">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnUpd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:onClick="updateLine"
            android:text="@string/update" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDelete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"

            android:onClick="deleteLine"
            android:text="@string/delete" />
    </TableRow>

</androidx.constraintlayout.widget.ConstraintLayout>