<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="UpdatePicture"
    tools:context=".AddingData">

    <TextView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Добавление записи"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etManufacturer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/firm"
        android:inputType="textCapWords"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@id/etModel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heading" />

    <EditText
        android:id="@+id/etModel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/model"
        android:inputType="textCapWords"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etManufacturer"
        app:layout_constraintTop_toBottomOf="@+id/heading" />

    <EditText
        android:id="@+id/etColour"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/colour"
        android:inputType="textCapWords"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/etPrice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etManufacturer" />

    <EditText
        android:id="@+id/etPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/price"
        android:inputType="date"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etColour"
        app:layout_constraintTop_toBottomOf="@+id/etModel" />

    <ImageView
        android:id="@+id/ivPicture"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:src="@drawable/absence"
        app:layout_constraintBottom_toTopOf="@+id/tvdeletePicture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPrice" />

    <TextView
        android:id="@+id/tvdeletePicture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:onClick="DeletePicture"
        android:text="@string/delete_picture"
        android:textAlignment="center"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/buttonChanging"
        app:layout_constraintTop_toBottomOf="@+id/ivPicture"
        tools:layout_editor_absoluteX="10dp" />

    <TableRow
        android:id="@+id/buttonChanging"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnUpd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@drawable/batton_background"
            android:onClick="AddData"
            android:text="@string/add" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDelete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@drawable/batton_background"
            android:onClick="Exit"
            android:text="@string/exit" />
    </TableRow>

</androidx.constraintlayout.widget.ConstraintLayout>