<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConclusionList">

    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/database"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableRow
        android:id="@+id/trButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHeader"
        android:layout_margin="10dp"
        android:layout_weight="1">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnExit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@drawable/batton_background"
            android:onClick="Exit"
            android:text="@string/exit" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@drawable/batton_background"
            android:onClick="TextBlockVisibility"
            android:text="@string/filter_closed" />
    </TableRow>

    <TableLayout
        android:id="@+id/tlSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/trButton">
        <TableRow
            android:layout_margin="5dp"
            android:layout_weight="1">

            <Spinner
                android:id="@+id/chingSearch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/spinner"
                android:contentDescription="Сортировка"
                android:entries="@array/fieldsNameSearch" />

            <EditText
                android:id="@+id/etSearch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:hint="@string/enter_value"
                android:textAlignment="center" />

        </TableRow>

        <TableRow
            android:layout_margin="5dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/headerOrder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sort_by_columns"
                android:textAlignment="center" />

        </TableRow>

        <TableRow
            android:layout_margin="5dp"
            android:layout_weight="1">

            <Spinner
                android:id="@+id/sorting1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/spinner"
                android:contentDescription="Сортировка_параметр1"
                android:entries="@array/fieldsName" />

            <Spinner
                android:id="@+id/order1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/spinner"
                android:contentDescription="Сортировка_параметр1"
                android:entries="@array/order" />

        </TableRow>

        <TableRow
            android:layout_margin="5dp"
            android:layout_weight="1">

            <Spinner
                android:id="@+id/sorting2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/spinner"
                android:contentDescription="Сортировка_параметр2"
                android:entries="@array/fieldsName" />

            <Spinner
                android:id="@+id/order2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/spinner"
                android:contentDescription="Сортировка_параметр2"
                android:entries="@array/order" />

        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/tvDeleteSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_search"
        android:visibility="gone"
        android:layout_margin="5dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tlSearch"/>

    <ListView
        android:id="@+id/lvData"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tvHint"
        app:layout_constraintTop_toBottomOf="@+id/tvDeleteSearch" />

    <TextView
        android:id="@+id/tvHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint"
        android:layout_margin="5dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>